fixed unevenness

--- a/styles/content_body.css
+++ b/styles/content_body.css
@@ -4,7 +4,6 @@
     color: black;
     padding: 0px 10px 10px 10px;
     background: linear-gradient(45deg, #7495cf, #87CEEB, #e6f7ac);
-    background-color: black;
     border-radius: 30px;
     width: 65%;
     border: 2px solid white;
